:art: https://github.com/siyuan-note/petal/issues/34

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -10,7 +10,9 @@
     "types": [
       "./src/types",
       "node"
-    ]
+    ],
+    "declaration": true,
+    "emitDeclarationOnly": true,
   },
   "include": [
     "src"
