:art: https://github.com/siyuan-note/siyuan/issues/11782

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "outDir": "./dist/",
+    "outDir": "./src/types/dist",
     "noImplicitAny": true,
     "module": "commonjs",
     "target": "es6",
