--- a/app/package.json
+++ b/app/package.json
@@ -50,8 +50,8 @@
   ],
   "devDependencies": {
     "@types/node": "^18.13.0",
-    "@typescript-eslint/eslint-plugin": "^5.30.6",
-    "@typescript-eslint/parser": "^5.30.6",
+    "@typescript-eslint/eslint-plugin": "^8.15.0",
+    "@typescript-eslint/parser": "^8.15.0",
     "blueimp-md5": "^2.19.0",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
@@ -60,7 +60,7 @@
     "electron-builder": "24.13.3",
     "encoding": "^0.1.13",
     "esbuild-loader": "^3.0.1",
-    "eslint": "^8.19.0",
+    "eslint": "^9.15.0",
     "file-loader": "^6.2.0",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.5.0",
@@ -74,7 +74,8 @@
     "typescript": "^4.7.4",
     "webpack": "^5.94.0",
     "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "globals": "^15.12.0"
   },
   "dependencies": {
     "@electron/remote": "^2.1.2"
